--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
     "@neondatabase/serverless": "^0.10.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.7.0",
     "hono": "^4.6.16",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
