--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@clerk/nextjs": "^6.9.10",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
+    "@hookform/resolvers": "^4.0.0",
     "@neondatabase/serverless": "^0.10.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,12 +30,16 @@
     "hono": "^4.6.16",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-use": "^17.6.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
